    - add thumbnail pagination support
    - track the thumbnail "page" we're on
    - track the number of thumbnails for page (50, by default)
    - remove some unnecessary HTML, simplify tables
    - display all exif data, rather than just some
    - make our banner printing more consistent, navigable
    - fix a couple of undefined variable errors

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 02 Oct 2016 15:37:01 -0500

pictor (2.36-0ubuntu1) yakkety; urgency=medium

  * debian/pictor.install:
    - install /usr/bin/pictor-thumbs
  * pictor-thumbs:
    - make sure we find the right php binary
  * debian/pictor.cron.hourly => debian/pictor.cron.daily:
    - move the cronjob to daily, rather than hourly

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 02 Oct 2016 15:36:58 -0500

pictor (2.35-0ubuntu1) xenial; urgency=medium

  [ Nishanth Aravamudan ]
  * debian/control, index.php: LP: #1549942
    - Update to PHP7.0 dependencies

  [ Dustin Kirkland ]
  * debian/control:
    - maintain php5 compat for the php

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 09 Mar 2016 18:14:44 -0500

pictor (2.34-0ubuntu1) xenial; urgency=medium

  * debian/control:
    - move deps to 1 per line
  * debian/pictor.cron.hourly
    - call the new pictor-thumbs binary
  * index.php:
    - add a batch mode
    - fix an array init error
  * pictor-rename:
    - check suffixes
  * pictor-thumbs:
    - create a new script to batch create thumbnails
  * debian/control, pictor-thumbs:
    - work toward php7.0 compatibility
    - fix syntax error
    - nearly php7.0 compatible, just need imagick for 7.0

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 17 Jan 2016 13:53:49 +0100

pictor (2.33-0ubuntu1) vivid; urgency=medium

  * debian/cron.hourly => debian/pictor.cron.hourly,
    debian/pictor.install, index.php, pictor.jpg:
    - when we fail to thumbnail an image, create a symlink to a simple
      pictor logo image
    - this will save us from retrying a failed thumbnail repeatedly
