@@ -11,6 +11,7 @@ pictor (2.37) unreleased; urgency=medium
     - display all exif data, rather than just some
     - make our banner printing more consistent, navigable
     - fix a couple of undefined variable errors
+    - disable batch transcoding of video
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 02 Oct 2016 15:37:01 -0500
 
